Readded molecule-idempotence-notest

--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -34,7 +34,7 @@
   changed_when: "'MODIFIED' in ldap_settings.message"
   failed_when: ldap_settings.failed and ("'Your license does not allow you to enable LDAP authentication' not in ldap_settings.msg")
   ignore_errors: yes
-  tags: [dss-config]
+  tags: [dss-config, molecule-idempotence-notest]
 
 - name: Configure containerized execution on Kubernetes in DSS settings
   when: configure_k8s
@@ -45,7 +45,7 @@
         executionConfigs: "{{ k8s_executionconfigs }}"
   register: container_settings
   changed_when: "'MODIFIED' in container_settings.message"
-  tags: [dss-config]
+  tags: [dss-config, molecule-idempotence-notest]
 
 - name: Enable spark support in DSS settings
   when: configure_spark
@@ -57,7 +57,7 @@
         executionConfigs: "{{ spark_executionconfigs }}"
   register: spark_settings
   changed_when: "'MODIFIED' in spark_settings.message"
-  tags: [dss-config]
+  tags: [dss-config, molecule-idempotence-notest]
 
 - name: Configure UIF user mappings
   when: configure_uif
@@ -68,7 +68,7 @@
         userRules: "{{ uif_userrules }}"
   register: impersonation_user_settings
   changed_when: "'MODIFIED' in impersonation_user_settings.message"
-  tags: [dss-config]
+  tags: [dss-config, molecule-idempotence-notest]
 
 - name: Configure UIF group mappings
   when: configure_uif
@@ -79,4 +79,4 @@
         groupRules: "{{ uif_grouprules }}"
   register: impersonation_group_settings
   changed_when: "'MODIFIED' in impersonation_group_settings.message"
-  tags: [dss-config]
+  tags: [dss-config, molecule-idempotence-notest]
