--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,5 @@
 galaxy_info:
+  standalone: true
   author: datarsense
   namespace: datarsense
   role_name: dataikudss
@@ -21,4 +22,4 @@ galaxy_info:
     - dss
 
 dependencies:
-  - dataiku.dataiku-ansible-modules
+  - role: dataiku.dataiku-ansible-modules
