Fix lint issues (#23)
* Fixed file permission
* Fixed YAML syntax
* Fixed unnamed play
* Added changed_when to shell commands
* Skip no-handlerwhen running ansible-lint

--- a/.github/workflows/molecule-ci.yml
+++ b/.github/workflows/molecule-ci.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Ansible Lint
         run: |
           ansible-galaxy install -r requirements.yml
-          ansible-lint -x package-latest
+          ansible-lint -x package-latest no-handler
   test:
     runs-on: ubuntu-20.04
     strategy:
