Added OIDC SSO support, tweaked LDAP authentication, disabled handlers when testing with molecule (#24)
* Created authentication.yml for LDAP & SSO settings
* Added OIDC SSO support with documentation
* Removed LDAP authentication sample values from role default and moved them into molecule converge play
* BREAKING CHANGE : Changed configure_ldap_settings type to boolean
* Disabled handlers when testing with molecule to avoid restart DSS or restart server issues. Handlers are now disabled with a when statement

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,7 +4,7 @@
 - name: Reboot server
   become: true
   ansible.builtin.reboot:
-  tags: [setup]
+  when: (skip_handlers is undefined) or (not skip_handlers)
 
 - name: Regenerate DSS config
   become: true
@@ -16,3 +16,4 @@
   ansible.builtin.service:
     name: "dataiku.{{ dss_datadir }}"
     state: restarted
+  when: (skip_handlers is undefined) or (not skip_handlers)
