--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,9 +5,9 @@
 # License file is not provided by the role. The dss_license_file variable 
 # has to be changed according to the license.json file location on the host executing ansible-playbok
 dss_base_repository_url: https://cdn.downloads.dataiku.com/public/studio
-dataiku_python_api_package: "git+https://github.com/dataiku/dataiku-api-client-python@release/5.1#egg=dataiku-api-client"
-dss_version: "10.0.7"
-dss_api_version: "5.1"
+dss_version: 11.4.0
+dataiku_python_api_package: dataiku-api-client
+dss_api_version: 11.4.0
 dss_service_user: dataiku
 dss_service_user_shell: "/bin/bash"
 dss_service_user_home_basedir: /home
@@ -26,8 +26,8 @@ download_dss_docker_images_url: "{{ dss_base_repository_url }}/{{ dss_version }}
 
 # Optional : add dss spark support
 configure_spark: true
-dss_hadoop_package: "dataiku-dss-hadoop-standalone-libs-generic-hadoop3-10.0.7.tar.gz"
-dss_spark_package: "dataiku-dss-spark-standalone-10.0.7-3.1.2-generic-hadoop3.tar.gz"
+dss_hadoop_package: "dataiku-dss-hadoop-standalone-libs-generic-hadoop3-11.4.0.tar.gz"
+dss_spark_package: "dataiku-dss-spark-standalone-11.4.0-3.3.1-generic-hadoop3.tar.gz"
 spark_executionconfigs:
   - name: default
     description: |- 
