--- a/.github/workflows/molecule-ci.yml
+++ b/.github/workflows/molecule-ci.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip setuptools
-          python3 -m pip install --upgrade ansible==5.9.0 yamllint ansible-lint dataiku-api-client=11.4.0
+          python3 -m pip install --upgrade ansible==5.9.0 yamllint ansible-lint dataiku-api-client==11.4.0
       - name: Ansible Lint
         run: |
           ansible-galaxy install -r requirements.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip setuptools
-          python3 -m pip install --upgrade ansible==5.9.0 molecule molecule-docker jmespath dataiku-api-client=11.4.0
+          python3 -m pip install --upgrade ansible==5.9.0 molecule molecule-docker jmespath dataiku-api-client==11.4.0
       - name: Write license file without logging its content
         run: 'echo "$LICENSE" > license.json'
         shell: bash
