Added missing  ansible.builtin.pip version parameter

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -31,7 +31,8 @@
   become: true
   ansible.builtin.pip:
     name: "{{ dataiku_python_api_package }}"
-    state: "{{ dss_api_version }}"
+    version: "{{ dss_api_version }}"
+    state: present
     executable: pip3
     #state: forcereinstall # Useful when release/5.1 gets updated
   tags: [setup, dss-setup, dss-api]
