--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,7 @@
 ---
 - src: git+https://github.com/dataiku/dataiku-api-client-python
   name: dataiku-api-client-python
-  version: release/11.1
+  version: 11.4.1.1
 - src: git+https://github.com/datarsense/dataiku-ansible-modules
   name: datarsense.dataiku-ansible-modules
   version: master
