--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -7,6 +7,9 @@
     dss_jek_xmx: 2g
     dss_fek_xmx: 2g
     
+    configure_mysql: true
+    mysql_jdbc_connector_url: https://repo1.maven.org/maven2/mysql/mysql-connector-java/8.0.33/mysql-connector-java-8.0.33.jar
+
     configure_ldap_settings: true
     ldap_url: "ldap://ldap.internal.example.com/dc=example,dc=com"
     ldap_binddn: "uid=readonly,ou=users,dc=example,dc=com"
