--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -8,7 +8,7 @@
     dss_fek_xmx: 2g
     
     configure_mysql: true
-    mysql_jdbc_connector_url: https://repo1.maven.org/maven2/mysql/mysql-connector-java/8.0.33/mysql-connector-java-8.0.33.jar
+    mysql_jdbc_connector_url: https://repo1.maven.org/maven2/com/mysql/mysql-connector-j/8.0.31/mysql-connector-j-8.0.31.jar
 
     configure_ldap_settings: true
     ldap_url: "ldap://ldap.internal.example.com/dc=example,dc=com"
