--- a/tasks/install_jdbc_drivers.yml
+++ b/tasks/install_jdbc_drivers.yml
@@ -1,6 +1,6 @@
 ---
 - name: Download MySql JDBC connector
-  when: "{{ configure_mysql and mysql_jdbc_connector_url is defined}}"
+  when: configure_mysql and mysql_jdbc_connector_url is defined
   become: true
   become_user: "{{ dss_service_user }}"
   ansible.builtin.get_url:
