--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -37,6 +37,7 @@ provisioner:
   log: True
   env:
     ansible_python_interpreter: "/usr/bin/python3"
+    DOCKER_TIMEOUT: 240
 verifier:
   name: ansible
   env:
