--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -52,6 +52,7 @@
           dockerTLSVerify: false
     configure_k8s: true
     download_dss_docker_images: true
+    download_dss_docker_images_url_tmp_directory: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/.tmp"
     k8s_executionconfigs:
       - name: test1
         type: KUBERNETES
