--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -10,6 +10,7 @@
   become: true
   become_user: "{{ dss_service_user }}"
   ansible.builtin.command: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ dss_datadir }}/bin/dssadmin regenerate-config"
+  changed_when: true
 
 - name: Restart DSS
   become: true
