--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,7 +6,7 @@ galaxy_info:
   description: Role automating Dataiku DSS deployment
 
   license: GPL-2.0-or-later
-  min_ansible_version: 5.8
+  min_ansible_version: "5.8"
 
   platforms:
   - name: Debian
@@ -14,8 +14,8 @@ galaxy_info:
     - buster
   - name: EL
     versions:
-    - 7
-    - 8
+    - "7"
+    - "8"
 
   galaxy_tags:
     - dataiku
