--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -113,7 +113,7 @@
         targetHadoop: hadoop-userB
   # https://www.jeffgeerling.com/blog/2020/resolving-fedora-dnf-error-no-such-file-or-directory-varlibdnfrpmdblockpid
   pre_tasks:
-    - name: Wait for systemd to complete initialization.  # noqa 303
+    - name: Wait for systemd to complete initialization.  # noqa command-instead-of-module
       ansible.builtin.command: systemctl is-system-running
       register: systemctl_status
       until: >
