--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -53,6 +53,7 @@
     configure_k8s: true
     download_dss_docker_images: true
     download_dss_docker_images_url_tmp_directory: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/.tmp"
+
     k8s_executionconfigs:
       - name: test1
         type: KUBERNETES
@@ -161,6 +162,7 @@
       ansible.builtin.include_role:
         name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
       vars:
-        dss_version: "11.1.1"
-        dss_hadoop_package: "dataiku-dss-hadoop-standalone-libs-generic-hadoop3-11.1.1.tar.gz"
-        dss_spark_package: "dataiku-dss-spark-standalone-11.1.1-3.2.1-generic-hadoop3.tar.gz"
+        dss_version: "11.4.0"
+        dss_hadoop_package: "dataiku-dss-hadoop-standalone-libs-generic-hadoop3-11.4.0.tar.gz"
+        dss_spark_package: "dataiku-dss-spark-standalone-11.4.0-3.3.1-generic-hadoop3.tar.gz"
+        download_dss_docker_images: true
