--- a/tasks/pre_install/centos.yml
+++ b/tasks/pre_install/centos.yml
@@ -1,6 +1,6 @@
 ---
 # Default package manager in Centos 7 is YUM
-- name: Installing sudo package
+- name: Installing sudo package & enable EPEL repository on Centos 7
   ansible.builtin.yum:
     name: "{{ packages }}"
     state: present
@@ -8,17 +8,18 @@
     ansible_python_interpreter: "/usr/bin/python2"
     packages:
       - sudo
+      - epel-release
   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '7'
 
-- name: Enable EPEL Repository on CentOS 7
-  become: true
-  ansible.builtin.yum:
-    name: epel-release
-    state: latest
-  vars:
-    ansible_python_interpreter: "/usr/bin/python2"
-  when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '7'
-  tags: [molecule-idempotence-notest]
+# - name: Enable EPEL Repository on CentOS 7
+#   become: true
+#   ansible.builtin.yum:
+#     name: epel-release
+#     state: latest
+#   vars:
+#     ansible_python_interpreter: "/usr/bin/python2"
+#   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '7'
+#   tags: [molecule-idempotence-notest]
 
 # Default package manager in Centos 8 is DNF
 - name: Installing sudo package
