--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -51,7 +51,7 @@
           prePushMode: NONE
           dockerTLSVerify: false
     configure_k8s: true
-    download_dss_docker_images: true
+    download_dss_docker_images: false
     download_dss_docker_images_url_tmp_directory: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/.tmp"
 
     k8s_executionconfigs:
@@ -165,4 +165,3 @@
         dss_version: "11.4.0"
         dss_hadoop_package: "dataiku-dss-hadoop-standalone-libs-generic-hadoop3-11.4.0.tar.gz"
         dss_spark_package: "dataiku-dss-spark-standalone-11.4.0-3.3.1-generic-hadoop3.tar.gz"
-        download_dss_docker_images: true
