--- a/tasks/pre_install.yml
+++ b/tasks/pre_install.yml
@@ -12,9 +12,9 @@
   ansible.builtin.import_tasks: pre_install/debian.yml
   when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
 
-- name: Centos specific preinstall tasks
-  ansible.builtin.import_tasks: pre_install/centos.yml
-  when: ansible_distribution == 'CentOS'
+- name: RHEL distro specific preinstall tasks
+  ansible.builtin.import_tasks: pre_install/el.yml
+  when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '8'
 
 - name: Flush handlers to reboot after disabling SELinux if needed
   ansible.builtin.meta: flush_handlers
