Build docker container-exec base image

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,7 +24,7 @@ configure_mysql: false
 # Optional : add containerized execution on kubernetes capability
 configure_k8s: false
 k8s_executionconfigs: []
-download_dss_docker_images: false
+dataikudss_docker_build_base_image_mode: build
 download_dss_docker_images_url: "{{ dss_base_repository_url }}/{{ dss_version }}/container-images/dataiku-dss-ALL-base_dss-{{ dss_version }}-r-py3.6.tar.gz"
 
 # Optional : add dss spark support
