--- a/tasks/docker_images.yml
+++ b/tasks/docker_images.yml
@@ -18,7 +18,7 @@
     path: "{{ download_dss_docker_images_url_tmp_directory }}"
     state: directory
     mode: '0755'
-  when: when: (dataikudss_docker_build_base_image_mode is defined) and (dataikudss_docker_build_base_image_mode == "download") and (download_dss_docker_images_url_tmp_directory is defined)
+  when: (dataikudss_docker_build_base_image_mode is defined) and (dataikudss_docker_build_base_image_mode == "download") and (download_dss_docker_images_url_tmp_directory is defined)
   tags: [docker-images]
 
 - name: Download base images archive provided by Dataiku
@@ -30,7 +30,7 @@
     dest: "{{ dss_install_dir_location }}/dataiku-dss-ALL-base_dss-{{ dss_version }}-r-py3.6.tar.gz"
     mode: '644'
   register: downloaded_images_archive
-  when: when: (dataikudss_docker_build_base_image_mode is defined) and (dataikudss_docker_build_base_image_mode == "download") and ((result_test_docker_images.images | length) < 3)
+  when: (dataikudss_docker_build_base_image_mode is defined) and (dataikudss_docker_build_base_image_mode == "download") and ((result_test_docker_images.images | length) < 3)
   tags: [docker-images]
 
 - name: Load all base images from archive
