--- a/tasks/docker_images.yml
+++ b/tasks/docker_images.yml
@@ -43,6 +43,8 @@
   tags: [docker-images, molecule-notest]
 
 - name: "Build docker container-exec base image"
+  become: true
+  become_user: "{{ dss_service_user }}"
   ansible.builtin.command: >
     "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ dss_datadir }}"/bin/dssadmin build-base-image
       --mode build
