--- a/tasks/docker_images.yml
+++ b/tasks/docker_images.yml
@@ -1,5 +1,21 @@
 ---
 
+#  Docker base images naming :
+#     if image_type == "container-exec":
+#         return "dku-exec-base-%s:dss-%s" % (install_id, DSS_VERSION)
+#     elif image_type == "spark":
+#         return "dku-spark-base-%s:dss-%s" % (install_id, DSS_VERSION)
+#     elif image_type == "api-deployer":
+#         return "dku-apideployer-apinode-base:dss-%s" % DSS_VERSION
+
+
+# DOCKER - BUILD CONTAINER-EXEC BASE IMAGE WHEN KUBERNETES IS ENABLED
+- name: DOCKER - BUILD CONTAINER-EXEC BASE IMAGE
+  ansible.builtin.import_tasks: docker_images/container_exec.yml
+  when: (configure_k8s) 
+    and (dataikudss_docker_build_base_image_mode is defined)
+
+# DOWNLOAD DOCKER IMAGES EMBEDDED IN A TAR.GZ ARCHIVE FROM DATAIKU CDN AND LOAD THEM
 - name: Test if DSS base images provided by Dataiku are registered locally
   become: true
   community.docker.docker_image_info:
@@ -41,13 +57,3 @@
   register: loaded_images
   when: downloaded_images_archive.changed
   tags: [docker-images, molecule-notest]
-
-- name: "Build docker container-exec base image"
-  become: true
-  become_user: "{{ dss_service_user }}"
-  ansible.builtin.command: >
-    "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ dss_datadir }}"/bin/dssadmin build-base-image
-      --mode build
-      --type container-exec
-      --build-from-image "{{ dataikudss_docker_source_image if dataikudss_docker_source_image is defined }}"
-  when: (dataikudss_docker_build_base_image_mode is defined) and (dataikudss_docker_build_base_image_mode == "build")
