--- a/tasks/docker_images/container_exec.yml
+++ b/tasks/docker_images/container_exec.yml
@@ -16,7 +16,12 @@
     "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ dss_datadir }}"/bin/dssadmin build-base-image
       --mode build
       --type container-exec
+      --distrib "{{ dataikudss_docker_distrib if dataikudss_docker_distrib is defined }}"
       --build-from-image "{{ dataikudss_docker_source_image if dataikudss_docker_source_image is defined }}"
+      --copy-to-buildenv "{{ dataikudss_docker_copy_to_buildenv if dataikudss_docker_copy_to_buildenv is defined }}"
+      --dockerfile-prepend "{{ dataikudss_dockerfile_prepend if dataikudss_dockerfile_prepend is defined }}"
+      --dockerfile-append "{{ dataikudss_dockerfile_append if dataikudss_dockerfile_append is defined }}"
+      "{{ '--without-r' if (dataikudss_docker_without_r is defined) and dataikudss_docker_without_r }}"
   register: container_exec_image_build
   changed_when: "'INFO Done, cleaning up' in container_exec_image_build.msg"
   when: (dataikudss_docker_build_base_image_mode == "build")
