--- a/tasks/docker_images/container_exec.yml
+++ b/tasks/docker_images/container_exec.yml
@@ -12,7 +12,7 @@
 - name: "Build docker container-exec base image"
   become: true
   become_user: "{{ dss_service_user }}"
-  ansible.builtin.command: >
+  ansible.builtin.shell: >
     "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ dss_datadir }}"/bin/dssadmin build-base-image
       --mode build
       --type container-exec
