--- a/tasks/docker_images/container_exec.yml
+++ b/tasks/docker_images/container_exec.yml
@@ -9,19 +9,21 @@
   when: (dataikudss_docker_build_base_image_mode == "build")
   tags: [docker-images]
   
+# A quick caveat about the folding > operator when used with ansible.builtin.shell: 
+# the rows indented beneath it have to be at the same indentation level for the folding to happen correctly
 - name: "Build docker container-exec base image"
   become: true
   become_user: "{{ dss_service_user }}"
   ansible.builtin.shell: >
     "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ dss_datadir }}"/bin/dssadmin build-base-image
-      --mode build
-      --type container-exec
-      "{{ '--distrib ' + dataikudss_docker_distrib if dataikudss_docker_distrib is defined }}"
-      "{{ '--build-from-image ' + dataikudss_docker_source_image if dataikudss_docker_source_image is defined }}"
-      "{{ '--copy-to-buildenv ' + dataikudss_docker_copy_to_buildenv if dataikudss_docker_copy_to_buildenv is defined }}"
-      "{{ '--dockerfile-prepend ' +  dataikudss_dockerfile_prepend if dataikudss_dockerfile_prepend is defined }}"
-      "{{ '--dockerfile-append ' +  dataikudss_dockerfile_append if dataikudss_dockerfile_append is defined }}"
-      "{{ '--with-r' if (dataikudss_docker_r is defined) and dataikudss_docker_r else '--without-r' }}"
+    --mode build
+    --type container-exec
+    "{{ '--distrib ' + dataikudss_docker_distrib if dataikudss_docker_distrib is defined }}"
+    "{{ '--build-from-image ' + dataikudss_docker_source_image if dataikudss_docker_source_image is defined }}"
+    "{{ '--copy-to-buildenv ' + dataikudss_docker_copy_to_buildenv if dataikudss_docker_copy_to_buildenv is defined }}"
+    "{{ '--dockerfile-prepend ' +  dataikudss_dockerfile_prepend if dataikudss_dockerfile_prepend is defined }}"
+    "{{ '--dockerfile-append ' +  dataikudss_dockerfile_append if dataikudss_dockerfile_append is defined }}"
+    "{{ '--with-r' if (dataikudss_docker_r is defined) and dataikudss_docker_r else '--without-r' }}"
   register: container_exec_image_build
   changed_when: "'INFO Done, cleaning up' in container_exec_image_build.msg"
   when: (dataikudss_docker_build_base_image_mode == "build")
