--- a/tasks/docker_images/container_exec.yml
+++ b/tasks/docker_images/container_exec.yml
@@ -25,7 +25,7 @@
 - name: "Build docker container-exec base image"
   become: true
   become_user: "{{ dss_service_user }}"
-  ansible.builtin.shell: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/build_base_images.sh container-exec"
+  ansible.builtin.command: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/build_base_images.sh container-exec"
   register: container_exec_image_build
   changed_when: "'INFO Done, cleaning up' in container_exec_image_build.msg"
   when: (dataikudss_docker_build_base_image_mode == "build")
