--- a/requirements.yml
+++ b/requirements.yml
@@ -4,4 +4,4 @@
   version: 12.1.0
 - src: git+https://github.com/datarsense/dataiku-ansible-modules
   name: datarsense.dataiku-ansible-modules
-  version: master
+  version: 20230919
